Platform-Repo/apps/dentistdev/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dentistdev-frontend
spec:
  selector:
    app: dentistdev-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
